--- a/about-us.css
+++ b/about-us.css
@@ -5,7 +5,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+.body-container{
+  margin: 0 auto;
+  max-width: 1200px;
+}
 body {
   font-family: "Montserrat", sans-serif;
 }
@@ -81,38 +84,25 @@ header {
 
 /* Container Start */
 .container{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    gap: 10px;
-    min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  gap: 5rem;
+  margin-top: 2rem;
+}
+.left{
+  width: 60%;
+}
+.right{
+  width: 30%;
+}
+.right img{
+  width: 100%;
+  border-radius: 5px;
+}
+.body-title{
+  margin-bottom: 1rem;
 }
 
-.box {
-    color: rgb(0, 0, 0);
-    padding: 20px;
-    text-align: center;
-}
-
-.box img{
-    height: 300px;
-    width: 300px;
-    border-radius: 10px;
-}
-
-.left {
-    grid-column: span 6; 
-}
-
-.right {
-    grid-column: span 6; 
-}
-
-/* Text Start */
-.text{
-    grid-column: 1/-1;
-}
-
-/* Text Bölüm Başlıkları ve İçerik Stil Düzenlemeleri */
 
 /* Genel Yazı Tipi ve Stil */
 .mission, .vision, .principles {
@@ -147,10 +137,10 @@ header {
 
 /* Principles (İlkeler) Bölümü */
 .principles h1 {
-    font-size: 26px;
+    text-align: center;
+    font-size: 2rem;
     color: #4ca7e8;
     margin-bottom: 20px;
-    text-align: left; 
     font-weight: bold;
 }
 
@@ -165,15 +155,6 @@ header {
     color: #333;
     margin-bottom: 15px;
 }
-
-/* Genel Alan Düzenlemeleri */
-section {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-
-
 
 h1 {
     font-size: 24px;
@@ -190,7 +171,3 @@ p {
     font-size: 16px;
     margin-bottom: 15px;
 }
-
-/* Text End */
-/* Container End */
-
