--- a/iklimlendirme/src/app/services/page.module.css
+++ b/iklimlendirme/src/app/services/page.module.css
@@ -11,13 +11,13 @@
 
 .contentWrapper {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 5rem;
 }
 
 .image {
   width: 40%;
-  height: 100%;
+  height: 90%;
   display: flex;
   justify-content: center;
 }
@@ -25,6 +25,7 @@
 .image img {
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
 
 .text {
