--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -7,12 +7,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px 20px;
+  padding: 30px 20px;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
-  align-items: center;
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .overlayTitle {
@@ -35,6 +38,10 @@
   filter: blur(2px); 
 }
 
+.overlayActions{
+  margin-top: 25px;
+}
+
 .overlayButton{
   background-color: #ff6f61;
   color: white;
@@ -42,7 +49,9 @@
   border-radius: 5px;
   text-decoration: none;
   font-size: 16px;
+  font-weight: bold;
   transition: all 0.3s ease-in-out;
+  
 }
 
 
