--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -4,11 +4,13 @@
 
 .overlayText {
   position: absolute;
-  left: 30px;
-  top: 350px;
-  padding: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px 20px;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
   align-items: center;
   text-align: center;
 }
@@ -25,6 +27,20 @@
   font-size: 20px;
   color: white;
   margin-bottom: 10px;
+}
+
+.overlayButton{
+  background-color: #ff6f61;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: all 0.3s ease-in-out;
+}
+
+.overlayActions{
+  margin-top: 25px;
 }
 
 .imgContainer img {
