--- a/iklimlendirme/src/app/contact-us/page.module.css
+++ b/iklimlendirme/src/app/contact-us/page.module.css
@@ -36,11 +36,14 @@
   margin-top: 10px;
   font-size: 1.2rem;
   color: #333;
+  display: flex;
+  align-items: center;
 }
 
-.contactItem i {
+.contactIcon{
   margin-right: 10px;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
+  
 }
 
 .contactItem span {
