--- a/iklimlendirme/src/app/about-us/page.module.css
+++ b/iklimlendirme/src/app/about-us/page.module.css
@@ -25,6 +25,7 @@
 
 .bodyTitle {
   margin-bottom: 1rem;
+  color: #4ca7e8;
 }
 
 .mission,
@@ -80,4 +81,5 @@
 .description {
   font-size: 16px;
   margin-bottom: 15px;
+  color: #333;
 }
