--- a/iklimlendirme/src/app/services/page.module.css
+++ b/iklimlendirme/src/app/services/page.module.css
@@ -53,6 +53,7 @@
   font-size: 16px;
   padding: 18px 15px;
   border-radius: 8px;
+  color: #333;
   transition: background-color 0.3s ease-in-out;
 }
 
