feat: update styles in contact us and main pages colors

--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -19,18 +19,18 @@
   text-align: center;
   margin-bottom: 10px;
   font-size: 30px;
-  color: white;
+  color: #4ca7e8;
 }
 
 .overlayDescription {
   text-align: center;
   font-size: 20px;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .overlayButton{
-  background-color: #ff6f61;
+  background-color: #004e89;
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
@@ -40,7 +40,7 @@
 }
 
 .overlayActions{
-  margin-top: 25px;
+  margin-top: 2rem;
 }
 
 .imgContainer img {
