--- a/iklimlendirme/src/app/contact-us/page.module.css
+++ b/iklimlendirme/src/app/contact-us/page.module.css
@@ -3,12 +3,12 @@
   height: 100vh;
   margin: 0 auto;
   max-width: 1200px;
+  background-color: #f4f4f4;
 }
 
 .contactText {
   width: 50%;
   padding: 10px;
-  background-color: bisque;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,7 +53,6 @@
 .formContainer {
   width: 50%;
   padding: 10px;
-  background-color: rgb(149, 149, 226);
   display: flex;
   flex-direction: column;
   justify-content: center;
