--- a/iklimlendirme/src/app/contact-us/page.module.css
+++ b/iklimlendirme/src/app/contact-us/page.module.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 20px;
   max-width: 1200px;
-  background-color: #f4f4f4;
+  background-color: var(--light-gray);
 }
 
 .contactText {
