--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -19,7 +19,7 @@
   text-align: center;
   margin-bottom: 10px;
   font-size: 30px;
-  color: #4ca7e8;
+  color: var(--light-blue);
 }
 
 .overlayDescription {
@@ -30,7 +30,7 @@
 }
 
 .overlayButton{
-  background-color: #004e89;
+  background-color: var(--primary-blue);
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
@@ -61,12 +61,12 @@
   justify-content: center;
   text-align: center;
   padding: 50px 20px;
-  background-color: #f4f4f4;
+  background-color: var(--light-gray);
 }
 .sectionSecond h2 {
   font-size: 28px;
   font-weight: bold;
-  color: #4ca7e8;
+  color: var(--light-blue);
   margin-bottom: 30px;
 }
 
@@ -110,7 +110,7 @@
 
 .icon {
   font-size: 60px;
-  color: #4ca7e8;
+  color: var(--light-blue);
 }
 
 .cardBody {
@@ -120,14 +120,14 @@
 .sectionThird {
   height: 100vh;
   padding: 50px 20px;
-  background-color: #f4f4f4;
+  background-color: var(--light-gray);
   text-align: center;
 }
 
 .sectionThird h2 {
   font-size: 28px;
   font-weight: bold;
-  color: #4ca7e8;
+  color: var(--light-blue);
   margin-bottom: 30px;
 }
 
@@ -215,7 +215,7 @@
 
 .sectionFourth {
   min-height: 50vh;
-  background-color: #f4f4f4;
+  background-color: var(--light-gray);
   padding: 50px 20px;
 }
 
@@ -223,6 +223,6 @@
   text-align: center;
   font-size: 28px;
   font-weight: bold;
-  color: #4ca7e8;
+  color: var(--light-blue);
   margin-bottom: 30px;
 }
