--- a/iklimlendirme/src/app/projects/page.module.css
+++ b/iklimlendirme/src/app/projects/page.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f4f4f4;
+  background-color: var(--light-gray);
 }
 
 .cardContainer {
