feat: enhance card styles and update descriptions

--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -114,7 +114,16 @@
 }
 
 .cardBody {
-  margin-top: 15px;
+  margin-top: 1rem;
+}
+
+.cardBodyTitle{
+  font-size: 18px;
+  margin-bottom: 0.5rem;
+}
+
+.cardBodyDescription{
+  text-align: start;
 }
 
 .sectionThird {
