feat: update contact information

--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -176,6 +176,10 @@
 }
 
 .contactInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  
   width: 48%;
   text-align: left;
   background-color: #fff;
@@ -185,7 +189,7 @@
 }
 
 .contactInfo h3 {
-  font-size: 24px;
+  font-size: 2rem;
   margin-bottom: 20px;
 }
 
@@ -193,6 +197,25 @@
   text-decoration: none;
   color: #333;
   font-size: 16px;
+}
+
+.contactIcon{
+  margin-right: 10px;
+  font-size: 1.7rem;
+}
+
+.contactText{
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.contactLink {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.contactLink:hover {
+  text-decoration: underline;
 }
 
 .contactAdress,
