--- a/iklimlendirme/src/app/contact-us/page.module.css
+++ b/iklimlendirme/src/app/contact-us/page.module.css
@@ -32,6 +32,35 @@
   color: #333;
 }
 
+.contactAdress,
+.contactMail,
+.contactPhone {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  white-space: nowrap;
+}
+
+.contactIcon{
+  margin-right: 10px;
+  font-size: 1.7rem;
+}
+
+.contactText{
+  font-size: 1.2rem;
+  color: #333;
+  
+}
+
+.contactLink {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.contactLink:hover {
+  text-decoration: underline;
+}
+
 .contactItem {
   padding: 15px 10px;
   margin-top: 10px;
