feat: update company name

--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -129,7 +129,7 @@
 .sectionThird {
   height: 100vh;
   padding: 50px 20px;
-  background-color: var(--light-gray);
+  background-color: var(--soft-white);
   text-align: center;
 }
 
