--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -1,24 +1,48 @@
+.sectionOne {
+  height: calc(100vh - 70px);
+}
+
 .imgContainer {
   position: relative;
 }
 
+.imgContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.imgContainer img {
+  position: relative;
+  z-index: 0;
+  height: calc(100vh - 70px);
+  width: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));
+  opacity: 1;
+}
+
 .overlayText {
   position: absolute;
+  z-index: 2;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 40px 20px;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.8);
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
-  align-items: center;
+  left: 10%;
+  transform: translateY(-50%);
+  padding: 0;
+  border-radius: 0;
+  background-color: transparent;
+  box-shadow: none;
   text-align: center;
 }
 
 .overlayTitle {
   text-align: center;
   margin-bottom: 10px;
-  font-size: 30px;
+  font-size: 4rem;
   color: var(--light-blue);
 }
 
@@ -29,28 +53,33 @@
   margin-bottom: 1rem;
 }
 
-.overlayButton{
+.overlayButton {
   background-color: var(--primary-blue);
   color: white;
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 5px;
   text-decoration: none;
   font-size: 16px;
   transition: all 0.3s ease-in-out;
+  text-align: center; 
+  min-width: 150px; 
 }
 
-.overlayActions{
+.overlayButton:hover {
+  background-color: var(--light-blue); 
+  transform: translateY(-3px); 
+}
+
+.overlayActions {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; 
   margin-top: 2rem;
 }
 
-.imgContainer img {
-  height: calc(100vh - 70px);
-  width: 100%;
-}
 
-.sectionOne {
-  height: calc(100vh - 70px);
-}
 
 .sectionSecond {
   height: 100vh;
@@ -117,19 +146,19 @@
   margin-top: 1rem;
 }
 
-.cardBodyTitle{
+.cardBodyTitle {
   font-size: 18px;
   margin-bottom: 0.5rem;
 }
 
-.cardBodyDescription{
+.cardBodyDescription {
   text-align: start;
 }
 
 .sectionThird {
   height: 100vh;
   padding: 50px 20px;
-  background-color: var(--soft-white);
+  background-color: var(--light-gray);
   text-align: center;
 }
 
@@ -179,7 +208,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  
+
   width: 48%;
   text-align: left;
   background-color: #fff;
@@ -193,12 +222,12 @@
   margin-bottom: 20px;
 }
 
-.contactIcon{
+.contactIcon {
   margin-right: 10px;
   font-size: 1.7rem;
 }
 
-.contactText{
+.contactText {
   font-size: 1.2rem;
   color: #333;
 }
