--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -1,5 +1,5 @@
 .sectionOne {
-  height: calc(100vh - 70px);
+ height: calc(100vh - 70px);
 }
 
 .imgContainer {
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 70px);
   background-color: rgba(0, 0, 0, 0.7); 
   z-index: 1;
 }
@@ -61,7 +61,7 @@
 }
 
 .overlayButton {
-  background-color: #3b82f6;
+  background-color: #d4a411;
   color: white;
   padding: 15px 20px;
   border-radius: 8px; 
@@ -74,7 +74,7 @@
 }
 
 .overlayButton:hover {
-  background-color: #2563eb; 
+  background-color: #d4a311e3; 
   transform: scale(1.05); 
 }
 
@@ -89,7 +89,6 @@
 
 .sectionSecond {
   height: 100vh;
-  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -99,7 +98,7 @@
   background-color: #f3f4f6; 
 }
 .sectionSecond h2 {
-  font-size: 3rem; 
+  font-size: 2.5rem; 
   font-weight: 800;
   color: #1f2937; 
   margin-bottom: 30px;
@@ -127,15 +126,15 @@
 }
 
 .card {
-  min-height: 250px;
+  min-height: 200px;
   background-color: white;
-  padding: 20px;
+  padding: 15px;
   border-radius: 10px;
   text-align: center;
   transition: all 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
-  margin-bottom: 80px;
+  margin-bottom: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
@@ -145,9 +144,9 @@
 }
 
 .icon {
-  font-size: 70px; 
+  font-size: 50px; 
   color: #3b82f6; 
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .cardBody {
