feat: update color scheme to use primary gold

--- a/iklimlendirme/src/app/about-us/page.module.css
+++ b/iklimlendirme/src/app/about-us/page.module.css
@@ -25,7 +25,7 @@
 
 .bodyTitle {
   margin-bottom: 1rem;
-  color: var(--light-blue);
+  color: var(--primary-gold);
 }
 
 .mission,
@@ -38,7 +38,7 @@
 
 .mission h2 {
   font-size: 22px;
-  color: var(--light-blue);
+  color: var(--primary-gold);
   margin-bottom: 10px;
 }
 
@@ -49,7 +49,7 @@
 
 .vision h2 {
   font-size: 22px;
-  color: var(--light-blue);
+  color: var(--primary-gold);
   margin-bottom: 10px;
 }
 
@@ -61,14 +61,14 @@
 .principles h1 {
   text-align: center;
   font-size: 2rem;
-  color: var(--light-blue);
+  color: var(--primary-gold);
   margin-bottom: 20px;
   font-weight: bold;
 }
 
 .principles h2 {
   font-size: 20px;
-  color: var(--light-blue);
+  color: var(--primary-gold);
   margin-bottom: 8px;
 }
 
