--- a/iklimlendirme/src/components/navbar.module.css
+++ b/iklimlendirme/src/components/navbar.module.css
@@ -1,4 +1,3 @@
-
 .header {
   background-color: white;
   padding: 15px 0;
@@ -54,12 +53,12 @@
 }
 
 .navMenu .active {
-  background-color: #4ca7e8;
-  color: white;
+  background-color: var(--primary-gold);
+  color: #fff;
   border-radius: 6px;
 }
 
 .navMenu a:hover {
-  background-color: #4ca7e8;
+  background-color: var(--primary-gold);
   color: #fff;
 }
