--- a/iklimlendirme/src/app/services/page.module.css
+++ b/iklimlendirme/src/app/services/page.module.css
@@ -35,7 +35,7 @@
 .bodyTitle {
   margin-bottom: 1.8rem;
   font-size: 2.2rem;
-  color: var(--light-blue);
+  color: var(--primary-gold);
 }
 
 .description {
