--- a/iklimlendirme/src/components/References.module.css
+++ b/iklimlendirme/src/components/References.module.css
@@ -1,11 +1,11 @@
 .slider {
   width: 100%;
   max-width: 100%;
-  height: 350px;
+  height: 380px;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  padding-bottom: 40px; 
+  padding-bottom: 40px;
 }
 
 .slider img {
@@ -19,18 +19,43 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .imageContainer {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 320px;
   overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .image {
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
+  object-fit: contain ;
+  width: 100% ;
+  height: 100% ;
 }
 
+@media screen and (max-width: 768px) {
+  .slider {
+    height: 340px;
+  }
+
+  .imageContainer {
+    min-height: 300px;
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .slider {
+    height: 300px;
+  }
+
+  .imageContainer {
+    min-height: 260px;
+    width: 260px;
+  }
+}
