--- a/iklimlendirme/src/app/page.module.css
+++ b/iklimlendirme/src/app/page.module.css
@@ -103,7 +103,7 @@
 .sectionSecond h2 {
   font-size: 2.5rem;
   font-weight: 800;
-  color: var(--primary-gold);
+  color: #333;
   margin-bottom: 30px;
 }
 
@@ -178,7 +178,7 @@
 .sectionThird h2 {
   font-size: 28px;
   font-weight: bold;
-  color: #eab308;
+  color: #333;
   margin-bottom: 30px;
 }
 
@@ -228,7 +228,7 @@
   background-color: #fff;
   border-radius: 10px;
   padding: 20px;
-  height: 400px;
+  height: 450px;
 }
 
 .contactInfo h3 {
@@ -268,12 +268,14 @@
   height: 400px;
   border-radius: 10px;
   overflow: hidden;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .contactMap iframe {
   border-radius: 10px;
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 .sectionFourth {
@@ -286,7 +288,7 @@
   text-align: center;
   font-size: 28px;
   font-weight: bold;
-  color: #eab308;
+  color: #333;
   margin-bottom: 30px;
 }
 
@@ -458,6 +460,7 @@
   .sectionSecond h2 {
     font-size: 2rem;
     margin-bottom: 20px;
+    color: #333;
   }
 
   .cards {
@@ -485,6 +488,7 @@
 
   .sectionThird h2 {
     font-size: 2rem;
+    color: #333;
   }
 
   .refContainer {
