--- a/iklimlendirme/src/app/globals.css
+++ b/iklimlendirme/src/app/globals.css
@@ -14,7 +14,7 @@ body {
   --light-blue: #4ca7e8;
   --light-gray: #f4f4f4;
   --soft-white: #fffdf9;
-  --primary-gold: #d4922b;
+  --primary-gold: #b8751f;
   --darker-gold: #ffa500;
 }
 
